[package]
name = "cbidiff"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"

[dependencies]
bidiff = { path = "../bidiff" }
pico-args = "0.3.0"
async-std = "0.99.12"
anyhow = "1.0.19"
log = "0.4.8"
env_logger = "0.7.1"
byteorder = "1.3.2"
brotli = "3.3.0"
integer-encoding = "1.0.7"
