[package]
name = "bidiff-cli"
version = "2.0.0-dev"
description = "A (distantly) bsdiff-derived binary patching tool"
license = "Apache-2.0 OR MIT"
authors = ["Brendan Molloy <brendan@bbqsrc.net>", "Amos Wenger <amoswenger@gmail.com>"]
edition = "2024"
repository = "https://github.com/divvun/bidiff"

[[bin]]
name = "bidiff"
path = "src/main.rs"

[dependencies]
bidiff = { path = ".." }

memmap2 = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
blake3 = "1"
mimalloc = "0.1"
anyhow = "1"
rayon = "1.11"

libc = "0.2"
tempfile = "3"
