[package]
name = "bic"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - example CLI tool"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"
repository = "https://github.com/divvun/bidiff"

[dependencies]
bidiff = { path = "../bidiff", features = ["enc"] }
bipatch = { path = "../bipatch" }

log = "0.4.17"
env_logger = "0.10.0"
byteorder = "1.4.3"
integer-encoding = "3.0.4"
hmac-sha256 = "1.1.6"
size = "0.4.1"
pipe = "0.4.0"
crossbeam-utils = "0.8.14"
argh = "0.1.10"
anyhow = "1.0.68"

[dependencies.comde]
version = "0.2.3"
default-features = false
features = ["snappy", "deflate", "zstandard", "brotli"]
