[package]
name = "bic"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - example CLI tool"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"
repository = "https://github.com/divvun/bidiff"

[dependencies]
bidiff = { path = "../bidiff", features = ["enc", "parallel"] }
bipatch = { path = "../bipatch" }

memmap2 = "0.9"
log = "0.4.17"
env_logger = "0.10.0"
byteorder = "1.4.3"
integer-encoding = "3.0.4"
blake3 = "1"
mimalloc = "0.1"
size = "0.4.1"
os_pipe = "1"
argh = "0.1.10"
anyhow = "1.0.68"

zstd = "0.13"
