[package]
name = "bic"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - example CLI tool"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2024"
repository = "https://github.com/divvun/bidiff"

[dependencies]
bidiff = { path = "../bidiff", features = ["enc"] }
bipatch = { path = "../bipatch" }

memmap2.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
blake3 = "1"
mimalloc = "0.1"
size = "0.5"
ringbuf = "0.4"
anyhow = "1"
rayon = "1.11"

libc = "0.2"
tempfile = "3"
