[package]
name = "bidiff"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - patch library"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2024"
repository = "https://github.com/divvun/bidiff"

[features]
default = ["enc"]
enc = ["integer-encoding"]
parallel = ["rayon"]
instructions = []
profiling = []

[dependencies]
# for enc
integer-encoding = { workspace = true, optional = true }

# other deps
tracing.workspace = true
rayon = { version = "1.11", optional = true }
memmap2.workspace = true
tempfile = "3"

[dev-dependencies]
proptest = "1"
