[package]
name = "bidiff"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - patch library"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2024"
repository = "https://github.com/divvun/bidiff"

[features]
default = ["enc"]
enc = ["integer-encoding", "zstd"]
parallel = ["rayon", "ringbuf"]
instructions = []
profiling = []

[dependencies]
# for enc
integer-encoding = { workspace = true, optional = true }

# for enc
zstd = { version = "0.13", optional = true }

# other deps
tracing.workspace = true
rayon = { version = "1.11", optional = true }
ringbuf = { version = "0.4", optional = true }
memmap2.workspace = true
tempfile = "3"

[dev-dependencies]
proptest = "1"
