[package]
name = "bidiff"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - patch library"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2024"
repository = "https://github.com/divvun/bidiff"

[features]
default = ["enc"]
enc = ["integer-encoding", "zstd"]
instructions = []
profiling = []

[dependencies]
# for enc
integer-encoding = { workspace = true, optional = true }

# for enc
zstd = { version = "0.13", optional = true }

# other deps
tracing.workspace = true
rayon = "1.11"
ringbuf = "0.4"
memmap2.workspace = true
tempfile = "3"

[dev-dependencies]
proptest = "1"
