[package]
name = "bipatch"
version = "1.1.0"
description = "A bsdiff-derived binary patching tool - patch library"
license = "Apache-2.0 OR MIT"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2024"
repository = "https://github.com/divvun/bidiff"

[dependencies]
integer-encoding.workspace = true
